Fixed flexbox positionings
Positions have been fixed to allow for the footer to be at the bottom of the page without the uneeded scrollbar.

--- a/htdocs/css/index.css
+++ b/htdocs/css/index.css
@@ -4,29 +4,15 @@
   margin: 0;
   padding: 0;
 }
-p {
+body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  margin: 0 20 0 20;
-  line-height: 100%;
 }
-/*Image*/
-img {
-    width: auto;
-    height : auto;
-    max-width: 100%;
-    margin-top: 75px;
+p {
+  margin: 0 20;
 }
-.me {
-    margin: 48px auto 16px;
-    width: 100px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    overflow: hidden;
+section {
+  flex: 1;
 }
 /*Navigation*/
 ul {
@@ -38,16 +24,18 @@ ul {
   top: 0;
   width: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 li {
-  float: left;
   position: relative;
 }
 li a {
-  display: block;
+  display: flex;
   color: #fff;
   text-align: center;
-  padding: 10px 12px;
+  padding: 10px 12px 10px 12px;
   text-decoration: none;
 }
 /*Active*/
@@ -66,10 +54,25 @@ li a:hover {
 }
 /*footer*/
 .footer {
-  position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
   padding: 10px;
   background-color: #CBCBCB;
+}
+/*Image*/
+.me > img {
+    width: auto;
+    height : auto;
+    max-width: 100%;
+}
+.me {
+    margin: 72px auto 24px;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    overflow: hidden;
 }
